# catalan-elections-forecasting

./: .gitignore  LICENSE  README.md  data.dvc  requirements.txt
.dvc/: config
results/: 20240528_182234_xgboost_multi_output_regressor.json  20240528_182318_xgboost_single_output_regressor.json  20240528_230000_knn_regressor.json  20240529_183214_decision_tree_regressor.json  20240531_092138_xgboost_multi_output_regressor.json  20240531_092149_xgboost_single_output_regressor.json  20240531_092159_knn_regressor.json  20240531_092210_decision_tree_regressor.json  20240531_122042_xgboost_multi_output_regressor.json  20240531_122737_xgboost_single_output_regressor.json  20240531_122837_knn_regressor.json  20240531_122851_decision_tree_regressor.json
results/20240601_1040/: linear_regression.json
results/20240601_1628/: linear_regression.json
results/20240601_1629/: xgboost_multi_output_regressor.json
results/20240603_1915/: decision_tree_regressor.json  knn_regressor.json  linear_regression.json  xgboost_multi_output_regressor.json  xgboost_single_output_regressor.json
results/20240604_1409/: decision_tree_regressor.json  knn_regressor.json  linear_regression.json  xgboost_multi_output_regressor.json  xgboost_single_output_regressor.json
results/20240607_0952/: decision_tree_regressor.json  knn_regressor.json  linear_regression.json  xgboost_multi_output_regressor.json  xgboost_single_output_regressor.json
src/: app.py  requirements.txt
src/download-data/: catalan_elections_data.py  download_data.py  pyproject.toml
src/download-data/download_data/: app.py
(+46 files in other folders)
