[tool.poetry]
name = "download-data"
version = "0.1.0"
description = ""
authors = ["Guillem Pla <guillempla@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
sodapy = "^2.2.0"
pandas = "^2.1.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
